#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

# Check for WIN32, without needing all the config.guess bulkiness.
# http://angband.pl/viewvc/termrec/branches/vt100-events/ac_check_win32.m4
AC_DEFUN([AC_CHECK_WIN32], [
AC_CACHE_CHECK([for Win32], [ac_cv_is_win32], [
ac_check_win32_save_LIBS=$LIBS
LIBS=-lgdi32
AC_LINK_IFELSE([#include <windows.h>
int main(){TextOutW(0,0,0,0,0);return 0;}], [ac_cv_is_win32=yes], [ac_cv_is_win32=no])
LIBS=$ac_check_win32_save_LIBS
])
if test $ac_cv_is_win32 = yes; then
  AC_DEFINE([IS_WIN32], 1, [Define if you're a Bill worshipper.])
fi
])

AC_PREREQ([2.63])
AC_INIT([AntTweakBar], [1.13], [BUG-REPORT-ADDRESS])
AC_CONFIG_SRCDIR([examples/TwSimpleGLUT.c])
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE(tilesim,1.0)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

AC_CHECK_WIN32
if test x"$ac_cv_is_win32" = xyes; then
  GL_LIBS="-lopengl32 -lgdi32 -lwinmm"
  LIBXXF86VM=
  LIBXI=
  VERSION_INFO=
  #LIBTW_EXTRA_CFLAGS="-D_WINDOWS"
else
  GL_LIBS="-lGL -lXext -lX11"
  AC_CHECK_LIB([Xxf86vm], [XF86VidModeSwitchToMode],
               [LIBXXF86VM=-lXxf86vm], [LIBXXF86VM=],
               [$X_LIBS -lXext -lX11])
  LIBXI=-lXi
  VERSION_INFO="-version-info 12:0:9"
  #LIBTW_EXTRA_CFLAGS="-D_UNIX"
fi

# debug
AC_ARG_ENABLE([debug],
	AS_HELP_STRING([--enable-debug],[Compile the debug version (default: disabled)]),
	[enable_debug=$enableval],
	[enable_debug=no])
AM_CONDITIONAL([DEBUG], [test $enable_debug = "yes"])
if test "x$enable_debug" = "xyes"; then
  changequote({,})
  CFLAGS=`echo "$CFLAGS" | $SED -e 's/-O[0-9s]*//g'`
  CXXFLAGS=`echo "$CXXFLAGS" | $SED -e 's/-O[0-9s]*//g'`
  changequote([,])
  dnl add -O0 only if GCC or ICC is used
  if test "$GCC" = "yes" || test "$ICC" = "yes"; then
    CFLAGS="$CFLAGS -O0"
    CXXFLAGS="$CXXFLAGS -O0"
  fi
else
  changequote({,})
  CFLAGS=`echo "$CFLAGS" | $SED -e 's/-g//g'`
  CXXFLAGS=`echo "$CXXFLAGS" | $SED -e 's/-g//g'`
  changequote([,])
fi

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lAntTweakBar':
AC_CHECK_LIB([AntTweakBar], [main])
# FIXME: Replace `main' with a function in `-lGL':
AC_CHECK_LIB([GL], [main])
# FIXME: Replace `main' with a function in `-lGLU':
AC_CHECK_LIB([GLU], [main])
# FIXME: Replace `main' with a function in `-lSDL':
AC_CHECK_LIB([SDL], [main])
# FIXME: Replace `main' with a function in `-lX11':
AC_CHECK_LIB([X11], [main])
# FIXME: Replace `main' with a function in `-lXext':
AC_CHECK_LIB([Xext], [main])
# FIXME: Replace `main' with a function in `-lXmu':
AC_CHECK_LIB([Xmu], [main])
# FIXME: Replace `main' with a function in `-lXrandr':
AC_CHECK_LIB([Xrandr], [main])
# FIXME: Replace `main' with a function in `-lXxf86vm':
AC_CHECK_LIB([Xxf86vm], [main])
# FIXME: Replace `main' with a function in `-lglfw':
AC_CHECK_LIB([glfw], [main])
# FIXME: Replace `main' with a function in `-lglut':
AC_CHECK_LIB([glut], [main])
# FIXME: Replace `main' with a function in `-lm':
AC_CHECK_LIB([m], [main])
# FIXME: Replace `main' with a function in `-lpthread':
AC_CHECK_LIB([pthread], [main])

# Checks for header files.
AC_CHECK_HEADERS([float.h stddef.h stdlib.h string.h sys/time.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_SIZE_T

# Checks for library functions.
#AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_CHECK_FUNCS([atexit gettimeofday memset sqrt strstr])

AC_CONFIG_FILES([Makefile
                 examples/Makefile
                 src/Makefile])
AC_OUTPUT
